Problem solved with stops index visible everywhere

--- a/app/assets/stylesheets/pages/_index-stop.scss
+++ b/app/assets/stylesheets/pages/_index-stop.scss
@@ -1,5 +1,5 @@
 .wrapper-messages {
-  background-image: linear-gradient(45deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url('http://demo.karatok.com/walah/wp-content/uploads/2014/11/Live-Concert-Shades.jpg');
+  background-image: linear-gradient(45deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%);
   background-size: cover !important;
   height: calc(100vh);
   padding-top: 15px;
